# rat

./: .gitignore  .ocamlformat  CITATION.cff  Dockerfile  LICENSE  Makefile  README.md  dune-project  rat.opam
.github/workflows/: deploy-web.yml  test.yml
example/: package.json
js-example/: package-lock.json  package.json  tsconfig.json
js-example/src/: index.ts  rat.d.ts
npm/: README.md  package.json  rat.d.ts
src/lib/: Analysis.ml  Analysis.mli  Charset.ml  Charset.mli  ExtRe.ml  ExtRe.mli  Lexer.mll  ParseRe.ml  ParseRe.mli  Parser.mly  ParserRe.ml  ParserRe.mli  Re.ml  Re.mli  Utility.ml  dune
src/lib/regular_automata/: abstractRegularAutomaton.ml  abstractRegularAutomaton.mli  dune  instances.ml  regularAlgebra.ml  regularAlgebra.mli
src/lib/regular_automata/utils/: SIG.ml  rewrite.ml  toolBox.ml  unionFind.ml
src/web/: dune  main.ml
test/: AnalysisTest.ml  dune
web/: index.html  script.js  style.css
